syntax = "proto3";

package greet;

option java_package = "com.proto";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
    int32 age = 3;
}

message GreetResponse {
    string result = 1;
}

message GreetRequest {
    Greeting greeting = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
}
